fix TextView wrapping (much closer, at least)

--- a/css/android-layout.css
+++ b/css/android-layout.css
@@ -256,6 +256,7 @@ html, body {
 	overflow-wrap: break-word;
 	overflow: hidden;
 	line-height: 1.2;
+	word-break: break-word;
 }
 
 
